objects/EUR_CRM_Fair_Share_Comparison_Audit__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>EUR_CRM_Category__c</referenceTo>
        <relationshipLabel>Fair Share Comparison Audits (EU)</relationshipLabel>
        <relationshipName>Fair_Share_Comparison_Audits_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Facings_to_Go__c</fullName>
        <label>Facings to Go</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Merchandising_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merchandising Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_of_PR_Facings__c</fullName>
        <label>No. of PR Facings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PR_Actual__c</fullName>
        <label>PR Actual %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PR_Target__c</fullName>
        <label>PR Target %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_RU_Fair_Share_Audit__c</fullName>
        <label>Fair Share Audit</label>
        <referenceTo>EUR_CRM_Fair_Share_Audit__c</referenceTo>
        <relationshipLabel>Fair Share Comparison Audits (EU)</relationshipLabel>
        <relationshipName>Fair_Share_Comparison_Audits_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Fair Share Comparison Audit (EU)</label>
    <nameField>
        <displayFormat>FSCA-{0000000000}</displayFormat>
        <label>Fair Share Comparison Audit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fair Share Comparison Audits (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_Fair_Share_Comparison_Audit</fullName>
        <active>true</active>
        <label>EUR BE Fair Share Comparison Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Fair_Share_Comparison_Audit</fullName>
        <active>true</active>
        <label>EUR RU Fair Share Comparison Audit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>